syntax = "proto3";

option csharp_namespace = "OwnershipServiceGrpc.Protos";

import "Protos/SharedGrpc.proto";
package OwnershipServiceGrpc;

service IOwnershipService
{
 rpc RegisterUser (SharedGrpc.UserRegistrationRequest) returns (Empty);
}

message Empty {}